# pyap

./: .flake8  AUTHORS.rst  README.rst  pyproject.toml
.github/workflows/: pr-publish-to-test-pypi.yml  publish-to-pypi.yml
argyle_pyap/: parser.py
argyle_pyap/source_US/: data.py
pyap/source_US/: data.py
tests/: test_parser.py  test_parser_ca.py  test_parser_gb.py  test_parser_us.py
